--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ email: stocknovicehong@gmail.com
 name: 주식초보홍대리
 description: 주절주절 블라블라
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "" # the base hostname & protocol for your site
+url: "stockcal.vip" # the base hostname & protocol for your site
 cover: "/assets/header_image.jpg"
 logo: "/assets/logo.png"
 
