--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,7 @@ pagination:
   enabled: true
   per_page: 5
   #permalink: "/page/:num/"
+  paginate_path: "/page:num/"
   sort_reverse: true
 
 # Archive settings (see https://github.com/jekyll/jekyll-archives/)
