--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ email: stocknovicehong@gmail.com
 name: 주식초보홍대리
 description: 주절주절 블라블라
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "https://stockcal.vip" # the base hostname & protocol for your site
+url: "" # the base hostname & protocol for your site
 cover: "/assets/header_image.jpg"
 logo: "/assets/logo.png"
 
@@ -24,13 +24,15 @@ markdown: kramdown
 inter_post_navigation: false
 highlightjs_theme: "monokai-sublime"
 
+
+
 # Pagination Settings
 # https://github.com/sverrirs/jekyll-paginate-v2/blob/master/README-GENERATOR.md#site-configuration
 pagination:
   enabled: true
   per_page: 5
-  #permalink: "/page/:num/"
-  paginate_path: "/page:num/"
+  permalink: "/page/:num/"
+  #paginate_path: "/page:num/"
   sort_reverse: true
 
 # Archive settings (see https://github.com/jekyll/jekyll-archives/)
