--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 plugins:
   - jekyll-archives # Sorry, not GitHub pages friendly!
   - jekyll-sitemap
-  - jekyll-paginate-v2
+  - jekyll-paginate
 
 exclude:
   - "/vendor/"
@@ -32,7 +32,6 @@ pagination:
   enabled: true
   per_page: 5
   permalink: "/page/:num/"
-  #paginate_path: "/page:num/"
   sort_reverse: true
 
 # Archive settings (see https://github.com/jekyll/jekyll-archives/)
