--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,8 @@ highlightjs_theme: "monokai-sublime"
 pagination:
   enabled: true
   per_page: 5
-  permalink: "/page/:num/"
+  #permalink: "/page/:num/"
+  paginate_path: "/page:num/"
   sort_reverse: true
 
 # Archive settings (see https://github.com/jekyll/jekyll-archives/)
